<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.act_login.user_profile.UserProfileFragment">

    <LinearLayout
        android:id="@+id/ln_back_layout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:gravity="center"
        android:orientation="horizontal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/btn_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:scaleX="0.6"
            android:scaleY="0.6"
            android:src="@drawable/btn_back" />

        <TextView
            android:id="@+id/name_fragment"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/mulish_semibold"
            android:text="@string/your_profile"
            android:textColor="@color/black"
            android:textSize="24sp" />

    </LinearLayout>

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/avatar_image"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_marginVertical="40dp"
        android:src="@drawable/placeholder_avatar"
        app:layout_constraintBottom_toTopOf="@+id/first_name"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.501"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ln_back_layout" />

    <de.hdodenhof.circleimageview.CircleImageView
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:src="@drawable/btn_plus"
        app:layout_constraintBottom_toBottomOf="@+id/avatar_image"
        app:layout_constraintRight_toRightOf="@id/avatar_image" />


    <EditText
        android:id="@+id/first_name"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginHorizontal="24dp"
        android:background="@drawable/ccp_custom"
        android:fontFamily="@font/mulish_semibold"
        android:hint="@string/first_name_hint"
        android:inputType="text"
        android:paddingHorizontal="10dp"
        android:textSize="14sp"
        app:layout_constraintBottom_toTopOf="@id/last_name"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent" />

    <EditText
        android:id="@+id/last_name"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginHorizontal="24dp"
        android:layout_marginTop="12dp"
        android:background="@drawable/ccp_custom"
        android:fontFamily="@font/mulish_semibold"
        android:hint="@string/last_name_hint"
        android:inputType="text"
        android:paddingHorizontal="10dp"
        android:textSize="14sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/first_name" />

    <Button
        android:id="@+id/btn_save"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:background="@drawable/btn_custom"
        android:fontFamily="@font/mulish_semibold"
        android:text="@string/btn_save"
        android:textAllCaps="false"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/last_name"
        app:layout_constraintVertical_bias="0.2" />

</androidx.constraintlayout.widget.ConstraintLayout>